apps/monitoring/components/json-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: json-exporter
  labels:
    app: json-exporter
spec:
  selector:
    app: json-exporter
  ports:
    - name: http
      port: 7979
      targetPort: 7979
