apps/monitoring/components/grafana-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  to:
    kind: Service
    name: grafana-service
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
